vcl/source/app/salplug.cxx
@@ -436,14 +436,4 @@ const OUString& SalGetDesktopEnvironment()
     return aDesktopEnvironment;
 }
 
-#ifdef _WIN32
-bool HasAtHook()
-{
-    BOOL bIsRunning = FALSE;
-    // pvParam must be BOOL
-    return SystemParametersInfoW(SPI_GETSCREENREADER, 0, &bIsRunning, 0)
-        && bIsRunning;
-}
-#endif
-
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
